# clear

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  build.toml
.cache/clangd/index/: ASTNode.cpp.617824A9E6793601.idx  ASTNode.h.42F90D71BB08132D.idx  BuildConfig.cpp.A088891B5B0F5F2D.idx  BuildConfig.h.50591DC2DBCD0EC2.idx  CompilationManager.cpp.BA934A854394E144.idx  CompilationManager.h.3D9D8DD2562763B6.idx  Diagnostic.h.79510670099689CA.idx  DiagnosticCode.h.86C190A9DDF8B567.idx  DiagnosticsBuilder.cpp.7DB5155584297818.idx  DiagnosticsBuilder.h.2BF315274729C302.idx  FunctionCache.cpp.E6C1B5B9D09234D8.idx  FunctionCache.h.BD3192A0C9C1A00F.idx  Intrinsics.cpp.FD9D855BDAEA4ADD.idx  Intrinsics.h.779987039F8120A3.idx  LLVMInclude.h.13B60E7EE9D15576.idx  Lexer.cpp.D6C4602A961394B6.idx  Lexer.h.33BAA5E45417A2F3.idx  LibraryLinker.cpp.A0C1D8D5F8B28E4D.idx  Log.h.73600FFEB04ED5D1.idx  Module.cpp.B652BDC921D6FB6D.idx  Module.h.26D3304CE67AD2B4.idx  Operator.h.6F0DC851E846022C.idx  Parser.cpp.E169A20D18588ED3.idx  Parser.h.32E1C157FE2C658C.idx  Source.cpp.2DC2AA836EDF22A3.idx  Symbol.cpp.31B6B917491C4BBF.idx  Symbol.h.CCB45CF714FEC7FD.idx  SymbolOperations.cpp.AA73040F17902C6D.idx  SymbolOperations.h.167DD406F891E48E.idx  SymbolTable.cpp.EAA58E6ADF5EFE35.idx  SymbolTable.h.A079A2E460E591BC.idx  Token.h.0B47449B807F919C.idx  TokenDefinitions.h.EA64782D0BC55E62.idx  Type.cpp.4BA49557CCAFB5F9.idx  Type.h.DCD42EA0903A5426.idx  TypeCasting.cpp.32722439E8705871.idx  TypeCasting.h.4CDDD743BCF7AF20.idx  TypeRegistry.cpp.AC4BDA70877CA24B.idx  TypeRegistry.h.FB4CE2145D8608FF.idx  Utils.cpp.29CAA413BA81754D.idx  (+3 more)
References/: Lexer.cpp  Lexer.h
Scripts/: Build.py  Errors.toml  build.py
Source/: Source.cpp  alkhat.h  build.toml  file.ll  test.cl  test.ir  variable_tests.cl
Source/API/LLVM/: LLVMBackend.cpp  LLVMBackend.h  LLVMInclude.h
Source/AST/: AST.cpp  AST.h  ASTNode.cpp  ASTNode.h  ASTNodeN.cpp  ASTNodeN.h  ExpressionBuilder.cpp  ExpressionBuilder.h  FunctionCache.cpp  FunctionCache.h  Intrinsics.cpp  Intrinsics.h  SymbolTable.cpp  SymbolTable.h  TypeCasting.cpp  TypeCasting.h
Source/CommandLine/: CommandLineParsing.cpp  CommandLineParsing.h
Source/Compilation/: BuildConfig.cpp  BuildConfig.h  CompilationManager.cpp  CompilationManager.h  LibraryLinker.h  Module.cpp  Module.h
Source/ConstEval/: ConstEval.cpp  ConstEval.h
Source/Core/: AST.cpp  AST.h  ASTNode.cpp  ASTNode.h  Log.h  NewType.h  NewTypes.cpp  NewTypes.h  Operator.h  Parser.cpp  Parser.h  Ref.h  Scope.cpp  Scope.h  States.cpp  States.h  Tokenizer.cpp  Tokenizer.h  Tokens.cpp  Tokens.h  Type.cpp  Type.h  TypeRegistry.cpp  TypeRegistry.h  Types.cpp  Types.h  Utils.cpp  Utils.h  Value.cpp  Value.h
Source/Diagnostics/: Diagnostic.h  DiagnosticCode.h  DiagnosticsBuilder.cpp  DiagnosticsBuilder.h
Source/Errors/: ErrorCode.h
Source/Lexing/: Errors.cpp  Errors.h  Lexer.cpp  Lexer.h  LexerUtils.cpp  LexerUtils.h  Source.cpp  Token.cpp  Token.h  TokenDefinitions.h  Tokens.cpp  Tokens.h
Source/Linker/: BuildConfig.cpp  BuildConfig.h  CompilationManager.cpp  CompilationManager.h  LibraryLinker.cpp  LibraryLinker.h  Linker.cpp  Linker.h
Source/Parsing/: Errors.cpp  Errors.h  ParseNode.h  Parser.cpp  Parser.h  ParserRegistry.cpp  ParserRegistry.h  Tokens.cpp  Tokens.h
Source/Sema/: Cloner.cpp  Cloner.h  ConstEval.cpp  ConstEval.h  Infer.cpp  Infer.h  NameMangler.cpp  NameMangling.h  Sema.cpp  Sema.h  SemaVariable.h  SymbolTable.cpp  SymbolTable.h
Source/Symbols/: FunctionCache.cpp  FunctionCache.h  Module.cpp  Module.h  Symbol.cpp  Symbol.h  SymbolOperations.cpp  SymbolOperations.h  SymbolTable.cpp  SymbolTable.h  Type.cpp  Type.h  TypeCasting.cpp  TypeRegistry.cpp  TypeRegistry.h
Standard/: allocater.cl  math.cl  math.h
Tests/: main.cl  maintests.cl
